syntax = "proto3";

package sysmon;
option go_package = "./;sysmon";

service Sysmon {
  rpc StreamStats (StatsRequest) returns (stream StatsResponse) {}
}

message StatsRequest {
  uint32 interval_n = 1;
  uint32 average_m = 2;
}

message LoadAverage {
  double one_minute = 1;
  double five_minutes = 2;
  double fifteen_minutes = 3;
}

message CpuStat {
  double user = 1;
  double system = 2;
  double idle = 3;
}

message StatsResponse {
  LoadAverage load_average = 1;
  CpuStat cpu_stat = 2;
}